--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-online-resume-editor</title>
+    <script src="//at.alicdn.com/t/font_785299_n52el7otxeg.js"></script>
   </head>
   <body>
     <div id="app"></div>
