--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="//at.alicdn.com/t/font_785299_n52el7otxeg.js"></script>
+    <title>online-resume</title>
   </head>
   <body>
     <div id="app"></div>
